# stock_manager

./: .gitignore  README.md  pyproject.toml
stock_manager/: __init__.py  __main__.py  cli.py  database.py
